# fzy

./: .clang-format  .gitignore  CMakeLists.txt  main.c
src/: bonus.h  choices.c  choices.h  config.def.h  fzy.c  match.c  match.h  options.c  options.h  tty.c  tty.h  tty_interface.c  tty_interface.h
test/: test_match.c  test_properties.c
